[package]
name = "akd_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["blocking"] }
roxmltree = "0.20.0"
plexi-core = { git = "https://github.com/markbt/plexi.git", rev = "9d459b7fb26101e5c9c2489c220cbae03d1d7afe" }
akd = {version = "0.11.0", features = ["public_auditing", "whatsapp_v1", "experimental", "serde_serialization"]}
akd_core = "0.11.0"
tokio = { version = "1.44.2", features = ["full"] }
queues = "1.0.2"
rand = "0.9.1"
